# streaming-histogram

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml  pyrightconfig.json  server.py  tox.ini
.github/workflows/: benchmarks.yml  ci.yml
benches/: core_histograms.rs
benchmarks/: accumulate_chunks.py  compare_numpy.py  comparison.py  dense_parallel_scaling.py
src/: core.rs  lib.rs
streaming_histogram/: __init__.py  __init__.pyi  _native.pyi  wrapper.py
tests/: test_streaming_histogram.py
ui/: app.js  index.html
