[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "streaming-histogram"
version = "0.1.0"
description = "Streaming histogram Python bindings backed by Rust and PyO3."
authors = [{ name = "Example Dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[tool.maturin]
bindings = "pyo3"
python-packages = ["streaming_histogram"]
module-name = "streaming_histogram._native"
include = [
    "streaming_histogram/__init__.pyi",
    "streaming_histogram/_native.pyi",
    "streaming_histogram/py.typed",
]

[dependency-groups]
dev = [
    "psutil>=7.1.3",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]
